# LabTLB

./: .gitignore  CMakeLists.txt  output.csv  plot.py  pyproject.toml  respostas.md  script.py
src/: main.c
