[project]
name = "labtlb"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Cordeiro da Camara",email = "eduardo.camara@icomp.ufam.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
